@@ -80,6 +80,12 @@ extern OCTINTERP_API int mexCallMATLAB (int nargout, mxArray *argout[],
                                         int nargin, mxArray *argin[],
                                         const char *fname);
 
+extern OCTINTERP_API mxArray * mexCallMATLABWithTrap (int nargout,
+                                                      mxArray *argout[],
+                                                      int nargin,
+                                                      mxArray *argin[],
+                                                      const char *fname);
+
 extern OCTINTERP_API void mexSetTrapFlag (int flag);
 extern OCTINTERP_API int mexEvalString (const char *s);
 extern OCTINTERP_API void mexErrMsgTxt (const char *s);
